[gd_scene load_steps=11 format=2]

[ext_resource path="res://9b8d336fe8b4035d/Ïº+å+à+èÏ¦+å/Ï¦ÏºÏ¡Ï¦/Untitled 08-18-2022 11-44-06 (1).png" type="Texture" id=1]
[ext_resource path="res://Scence/Enemy.gd" type="Script" id=2]
[ext_resource path="res://9b8d336fe8b4035d/Ïº+å+à+èÏ¦+å/Ï¦ÏºÏ¡Ï¦/Untitled 08-18-2022 11-44-06.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 15.5 )

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.391
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 64, 64, 160, 192 ), Rect2( 64, 48, 192, 208 ), Rect2( 0, 48, 256, 208 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture:load_path")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "res://.import/Untitled 08-18-2022 11-44-06 (1).png-1398303b741ebb40f5b0cbd25bb8231c.stex", "res://.import/Untitled 08-18-2022 11-44-06 (3).png-370a3ff86720c7a7afa39da7e1918fa5.stex", "res://.import/Untitled 08-18-2022 11-44-06 (6).png-28d59f5315355bf2b43171d1eb2235c4.stex" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.164
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture:load_path")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "res://.import/Untitled 08-18-2022 11-44-06 (1).png-1398303b741ebb40f5b0cbd25bb8231c.stex" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 64, 64, 160, 192 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "dead"
length = 0.35
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture:load_path")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "res://.import/Untitled 08-18-2022 12-04-21 (1).png-7eb9701731d3593d25181ce446f037cb.stex", "res://.import/Untitled 08-18-2022 12-04-21 (2).png-45ecaaf35e441f3070d5dbea3853a2fd.stex", "res://.import/Untitled 08-18-2022 12-04-21 (3).png-686e9b1279a6b462761f0fb56bf19cd2.stex" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:region_rect")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 48, 256, 208 ), Rect2( 0, 48, 256, 208 ), Rect2( 0, 48, 256, 208 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 154.5, 15 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 13.5, 12.5 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.5, 1.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 0.164063, 0.164063 )
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 64, 64, 160, 192 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 2 )
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/dead = SubResource( 6 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -35, 3 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( -193, 3 )
shape = SubResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -14.5, 4.5 )
shape = SubResource( 7 )

[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D_body_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
